fixed overflowing in post modal & some minor edit funct

--- a/react-app/src/components/postModal/modalPost.css
+++ b/react-app/src/components/postModal/modalPost.css
@@ -161,7 +161,7 @@ body{
 
 .comment-content-text{
     font-size: 14px;
-    max-width: 80%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -182,4 +182,21 @@ body{
 .comment-content-user-caption{
     width: 100%;
     overflow-wrap: break-word;
+}
+
+.post-comment-content-box{
+    width: 100%;
+    overflow-wrap: break-word;
+}
+
+.comment-edit-box{
+    font-family: 'Roboto', 'sans-serif';
+    border: none;
+    outline: none;
+    width: 100%;
+    resize: none;
+}
+
+.comment-container-input-section{
+    width: 100%;
 }
